--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,20 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1>Welcome to Railing around</h1>
+<p>
+	for any help go to
+	<%= link_to "One Month Rails", "http://onemonthrails.com" %>
+	</a> application.
+
+</p>
+
+<p>
+
+	<%= link_to "pretty usefull", "#" %>
+</p>
+
+<div class="footer">
+	<small>
+	<%= link_to "One Month Rails", "http://onemonthrails.com" %>
+	by <%= link_to "Mattan", "http://mattangriffel.com" %>
+	</small>
+</div>
+
