--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,12 @@
-<h1>Welcome to Railing around</h1>
-<p>
-	for any help go to
-	<%= link_to "One Month Rails", "http://onemonthrails.com" %>
-	</a> application.
+<div class="center hero-unit">
+	<h1>Welcome to Railing around</h1>
+	<p>
+		for any help go to
+		<%= link_to "One Month Rails", "http://onemonthrails.com" %>
+		</a> application.
 
-</p>
-
+	</p>
+</div>
 <p>
 
 	<%= link_to "pretty usefull", "#" %>
