--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,13 @@
 <% if user_signed_in? %>
 		<h1> You're logged in!</h1>
+		<div class="center hero-unit">
+		<h1>Welcome to Railing around</h1>
+		<p>
+			for any help go to
+			<%= link_to "One Month Rails", "http://onemonthrails.com" %>
+			</a> application.
+		</p>
+	</div>
 <% else %>
 	<div class="center hero-unit">
 		<h1>Welcome to Railing around</h1>
