--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,38 +1,13 @@
-<% if user_signed_in? %>
-		<h1> You're logged in!</h1>
-		<div class="center hero-unit">
-		<h1>Welcome to Railing around</h1>
-		<p>
-			for any help go to
-			<%= link_to "One Month Rails", "http://onemonthrails.com" %>
-			</a> application.
-		</p>
-	</div>
-<% else %>
-	<div class="center hero-unit">
-		<h1>Welcome to Railing around</h1>
-		<p>
-			for any help go to
-			<%= link_to "One Month Rails", "http://onemonthrails.com" %>
-			</a> application.
-
-		</p>
-	</div>
-
-	<p>
-	            <%= link_to "Sign Up Now!", new_user_registration_path, class: "btn btn-primary btn-medium" %>
-	        </p>
-
-	<p>
-
-		<%= link_to "pretty useful", "#" %>
-	</p>
-
-	<div class="footer">
-		<small>
-		<%= link_to "One Month Rails", "http://onemonthrails.com" %>
-		by <%= link_to "Mattan", "http://mattangriffel.com" %>
-		</small>
-	</div>
-<% end %>
-
+<% unless user_signed_in? %>
+    <div class="hero-unit">
+        <h1>Welcome to One Month Rails!</h1>
+        <p>
+            You've found the home page for the
+            <%= link_to "One Month Rails", "http://onemonthrails.com" %>
+            application.
+        </p>
+        <p>
+            <%= link_to "Sign Up Now!", new_user_registration_path, class: "btn btn-primary btn-large" %>
+        </p>
+    </div>
+<% end %
